--- a/core/package.json
+++ b/core/package.json
@@ -19,5 +19,8 @@
         "node-fetch": "^3.3.2",
         "ts-jest": "^29.4.6",
         "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "socket.io-client": "^4.8.3"
     }
 }
